Add enumType and relationCollection flag to WQSchema types, and remove :size properties from schema output